fix gap in dashboard video roll row
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@22659 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_course-dashboard.scss
+++ b/src/main/resources/scss/_course-dashboard.scss
@@ -168,7 +168,6 @@
 				height: 70px;
 				width: 33%;
 				@include experimental-value(width, calc(100% / 3) );
-				overflow: hidden;
 				border:{
 					color: #000;
 					style: solid;
@@ -202,6 +201,7 @@
 				.comments,.label{
 					@include ellipse();
 					overflow:hidden;
+					max-width: 100%;//force ellipsis
 				}
 
 				.date,.comments {
